# NelderMead-front

./: .env.example  .gitignore  .gitmodules  README.md  package-lock.json  package.json  tsconfig.electron.json  tsconfig.express.json  tsconfig.json  vite.config.ts  Отчёт.docx
src/: constants.ts  index.ts  settings.ts
src/addon/: CMakeLists.txt  binding.ts
src/addon/src/: addon.cpp  expression-tree-wrapper.cpp  nelder-mead-wrapper.cpp
src/addon/src/include/: expression-tree-wrapper.h  nelder-mead-wrapper.h
src/app/: constants.ts  index.ts
src/app/utils/: html-path-resolve.ts  load-url-with-retry.ts  start-app.ts
src/client/: constants.ts  global.scss  index.html  index.tsx
src/client/app/: store.ts
src/client/axios/: create-tree.ts  get-graph.ts  get-solution.ts
src/client/types/: enums.ts
src/client/utils/: calculate.ts  dot-allowed.ts  get-last-button.ts  get-limits.ts  get-query-string.ts  operation-exists.ts  updated-query.ts
src/common/types/: graph-points.ts  params.ts  simplex-params.ts  simplex.ts
src/common/utils/: get-env.ts
src/main/: index.ts  load-url-with-retry.ts  settings.ts
src/renderer/: App.tsx  global.scss  index.html  index.tsx
src/renderer/common/: constants.ts  cosntants.ts  dynamicCalculate.ts  enums.ts  interfaces.ts
src/server/: config.ts  constants.ts  index.ts  load-DLL.ts  load-DLL.ts.ts  settings.ts
src/server/controllers/: main.controller.ts  tree.controller.ts
src/server/routes/: tree.routes.ts
src/server/services/: main.service.ts  tree.service.ts
src/server/types/: GraphPoint.ts  ValuedGraphPoint.ts  (+4 more)
(+101 files in other folders)
